--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-background-slideshow": "^1.0.4",
     "react-dom": "^16.9.0",
+    "react-modal": "^3.10.1",
     "react-scripts": "3.1.2"
   },
   "scripts": {
